--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@ body {
   font: 14px 'Century Gothic', Futura, sans-serif;
   margin: 20px;
 }
+button{
+  background: #3f51b5;
+  color: #fff;
+}
 
 ol,
 ul {
@@ -30,8 +34,8 @@ div {
   margin-bottom: 10px;
 }
 
-.game-board{
-  margin: 11px 5px 5px 5px;
+.game-board {
+  margin: 12px 5px 0px 5px;
 }
 
 .square {
@@ -49,7 +53,7 @@ div {
   width: 34px;
 }
 
-.Icon{
+.Icon {
   color: rgb(248, 48, 75);
 }
 
@@ -70,20 +74,30 @@ div {
 .game {
   display: flex;
   flex-direction: row;
-  margin-left: 100px;
-  margin-top: -10px;
+  margin-left: 115px;
+  margin-top: 10px;
+}
+
+.logoutButton{
+  margin-left: 200px;
 }
 
 .game-info {
-  height: 660px;
-  margin-left: 120px;
-  background: rgb(235, 130, 130);
+  min-height: 675px;
+  min-width: 420px;
+  margin-left: 140px;
+  padding: 10px;
+  background: rgb(240, 177, 177);
   display: 'inline-block';
   box-shadow: 10px 10px 10px 10px rgb(133, 131, 131);
 }
 
 .loginLayout {
-  margin-left: 550px;
+  margin: 0px 0px 0px 500px;
+}
+
+.InfoLayout{
+  margin: -55px 0px 0px 480px;
 }
 
 .paper {
@@ -119,16 +133,16 @@ div {
   margin: 30px 0px 30px 0px;
 }
 
-.Username{
-  font-size: 30px;
+.Username {
+  font-size: 25px;
 }
 
-.buttonUser{
+.buttonUser {
   height: 50px;
   width: 50px;
 }
 
-.ErrorRegister{
+.ErrorRegister {
   color: red;
   margin: 20px 20px 0px 10px;
 }
