--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ body {
   font: 14px 'Century Gothic', Futura, sans-serif;
   margin: 20px;
 }
-button{
+button {
   background: #3f51b5;
   color: #fff;
 }
@@ -62,7 +62,7 @@ div {
 }
 
 .kbd-navigation .square:focus {
-  background: #ddd;
+  background: #ddd ;
 }
 
 .buttonSort {
@@ -78,7 +78,7 @@ div {
   margin-top: 10px;
 }
 
-.logoutButton{
+.logoutButton {
   margin-left: 200px;
 }
 
@@ -87,7 +87,7 @@ div {
   min-width: 420px;
   margin-left: 140px;
   padding: 10px;
-  background: rgb(240, 177, 177);
+  background: rgb(240, 230, 230);
   display: 'inline-block';
   box-shadow: 10px 10px 10px 10px rgb(133, 131, 131);
 }
@@ -96,8 +96,8 @@ div {
   margin: 0px 0px 0px 500px;
 }
 
-.InfoLayout{
-  margin: -55px 0px 0px 480px;
+.InfoLayout {
+  margin: -40px 0px 0px 0px;
 }
 
 .paper {
@@ -145,4 +145,17 @@ div {
 .ErrorRegister {
   color: red;
   margin: 20px 20px 0px 10px;
+}
+
+.Info {
+  display: flex;
+}
+
+.UserImage {
+  margin: 110px 130px 0px 215px;
+}
+
+.UploadImage {
+  margin: 30px 0px 0px 0px;
+  font-size: 18px;
 }
