--- a/public/registercss/css/main.css
+++ b/public/registercss/css/main.css
@@ -367,24 +367,24 @@ input {
 .input-group {
   position: relative;
   margin-bottom: 33px;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.7);
 }
 
 .input--style-3 {
   padding: 5px 0;
   font-size: 16px;
-  color: #ccc;
-  background: transparent;
+  color: rgb(10, 9, 9);
+  background: none;
 }
 
 .input--style-3::-webkit-input-placeholder {
   /* WebKit, Blink, Edge */
-  color: #ccc;
+  color: rgb(12, 12, 12);
 }
 
 .input--style-3:-moz-placeholder {
   /* Mozilla Firefox 4 to 18 */
-  color: #ccc;
+  color: rgb(15, 15, 15);
   opacity: 1;
 }
 
@@ -502,10 +502,11 @@ input {
   margin-top: 5px;
   overflow: hidden;
 } */
+
 .rsselect2{
   width: 100%;
-  background: black;
-  color: #fff;
+  background: none;
+  color: rgb(0, 0, 0);
   border: none;
 }
 
@@ -513,8 +514,8 @@ input {
    #TITLE
    ========================================================================== */
 .title {
-  font-size: 24px;
-  color: #fff;
+  font-size: 30px;
+  color: rgb(0, 0, 0);
   font-weight: 400;
   margin-bottom: 36px;
 }
@@ -531,7 +532,7 @@ input {
 }
 
 .card-3 {
-  background: #000;
+  background: rgb(255, 232, 232);
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
