--- a/src/App.css
+++ b/src/App.css
@@ -79,13 +79,30 @@ ul {
   display: flex;
   flex-direction: row;
   margin-left: 115px;
-  margin-top: 10px;
+  margin-top: 30px;
+}
+
+.gameonline {
+  display: flex;
+  flex-direction: row;
+  margin-left: 85px;
+  margin-top: 30px;
 }
 
 .game-info {
   min-height: 675px;
   min-width: 420px;
   margin-left: 140px;
+  padding: 10px;
+  background: rgb(240, 230, 230);
+  display: 'inline-block';
+  box-shadow: 10px 10px 10px 10px rgb(133, 131, 131);
+}
+
+.gameonline-info {
+  min-height: 675px;
+  min-width: 460px;
+  margin-left: 110px;
   padding: 10px;
   background: rgb(240, 230, 230);
   display: 'inline-block';
@@ -189,4 +206,36 @@ ul {
 
 .divAvatar {
   display: inline-flex;
+  width: 100%;
+  margin-left: 1px;
 }
+
+.li-online {
+  max-width: 500px;
+  background: rgb(250, 215, 215);
+  min-height: 35px;
+  width: 100%;
+  padding: 5px;
+  border-radius: 20px;
+  margin-bottom: 5px;
+}
+
+.li-left{
+  text-align: left;
+}
+.li-right{
+  text-align: right;
+}
+
+.divAvatarPlayer1{
+margin-left: 0px;
+max-width: 500px;
+}
+
+.divAvatarPlayer2{
+  margin-left: 30px;
+  }
+
+  #messages{
+    padding-left: 0px;
+  }
