--- a/src/App.css
+++ b/src/App.css
@@ -102,6 +102,7 @@ ul {
 .gameonline-info {
   min-height: 675px;
   min-width: 460px;
+  max-width: 500px;
   margin-left: 110px;
   padding: 10px;
   background: rgb(240, 230, 230);
@@ -207,35 +208,53 @@ ul {
 .divAvatar {
   display: inline-flex;
   width: 100%;
-  margin-left: 1px;
+  margin-left: 0.5px;
 }
 
 .li-online {
-  max-width: 500px;
+  max-width: 400px;
   background: rgb(250, 215, 215);
   min-height: 35px;
-  width: 100%;
-  padding: 5px;
+  padding: 5px 10px;
   border-radius: 20px;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
+  font-size: 18px;
+  display: inline-block;
+  overflow: auto;
+  word-wrap: break-word;
 }
 
-.li-left{
-  text-align: left;
+.li-left {
+  float: left;
 }
-.li-right{
-  text-align: right;
-}
-
-.divAvatarPlayer1{
-margin-left: 0px;
-max-width: 500px;
+.li-right {
+  float: right;
 }
 
-.divAvatarPlayer2{
-  margin-left: 30px;
-  }
+.divAvatarPlayer2 {
+  margin-left: 0px;
+  max-width: 500px;
+  visibility: hidden;
+  display: block;
+}
 
-  #messages{
-    padding-left: 0px;
-  }
+.divAvatarPlayer1 {
+  margin-left: 10px;
+}
+
+#messages {
+  padding-left: 0px;
+}
+
+.li-name {
+  font-size: 10px;
+  margin-bottom: 2px;
+  margin-left: 15px;
+  width: 90%;
+}
+
+.imagePlayer2 {
+  width: 50px;
+  height: 50px;
+  background: red;
+}
