--- a/src/App.css
+++ b/src/App.css
@@ -101,8 +101,8 @@ ul {
 
 .gameonline-info {
   min-height: 675px;
-  min-width: 460px;
-  max-width: 500px;
+  min-width: 520px;
+  max-width: 520px;
   margin-left: 110px;
   padding: 10px;
   background: rgb(240, 230, 230);
@@ -236,10 +236,12 @@ ul {
   max-width: 500px;
   visibility: hidden;
   display: block;
+  padding-left: 5px;
 }
 
 .divAvatarPlayer1 {
   margin-left: 10px;
+  padding-right: 0px;
 }
 
 #messages {
@@ -257,4 +259,30 @@ ul {
   width: 50px;
   height: 50px;
   background: red;
+}
+
+.btn-gameonline {
+  padding: 5px;
+  border-radius: 20px;
+}
+
+#yes,
+#no {
+  margin-left: 13px;
+  height: 30px;
+  padding-left: 8px;
+  padding-right: 8px;
+}
+
+#new-notification {
+  padding-left: 20px;
+  padding-right: 20px;
+  display: block;
+  visibility: hidden;
+  height: 50px;
+  font-size: 20px;
+}
+
+.li-mess-server{
+  background: #91a0f5;
 }
