--- a/src/App.css
+++ b/src/App.css
@@ -34,9 +34,13 @@ ul {
   margin-bottom: 10px;
 }
 
-.game-board {
+.game-board-online {
   margin: 12px 5px 0px 5px;
   visibility: hidden;
+}
+
+.game-board {
+  margin: 12px 5px 0px 5px;
 }
 
 .square {
@@ -305,7 +309,7 @@ ul {
   margin-top: 10px;
 }
 
-#buttonDraw{
+#buttonDraw {
   display: block;
   visibility: hidden;
   margin-top: 10px;
@@ -315,4 +319,14 @@ ul {
 .width100 {
   width: 100%;
   margin-bottom: 1px;
+}
+
+#turnDiv {
+  height: 10px;
+  width: 15%;
+  margin-top: 5px;
+  margin-left: 5%;
+  margin-bottom: 5px;
+  background: #91a0f5;
+  visibility: hidden;
 }
